--- a/index.html
+++ b/index.html
@@ -24,10 +24,40 @@
 
 <body>
 
+   <script>
+    var number1 = +prompt("Please number", 99);
+    var number2 = +prompt("Please number", 99);
+    alert("Сумма чисел " number1 + number2);
+    </script>
     <script>
-        function pow() {
-  return 8; // :) мы - мошенники!
-}
+        function getDecimal(n) {
+            var result = n - Math.round(n);
+            return result.toFixed(3);
+        }
+        alert( getDecimal(12.345) ); // 0.345
+        alert( getDecimal(1.2) ); // 0.2
+        alert( getDecimal(-1.2) ); // 0.2
+    </script>
+    <script>
+        function pow(x, n) {
+            if (n < 0) {
+                return NaN;
+            }
+            if (Math.round(n) != n) {
+                return NaN;
+            }
+            if (x == 0 && n == 0) {
+                return NaN;
+            }
+            
+            var result = 1;
+
+            for (var i = 0; i < n; i++) {
+                result *= x;
+            }
+
+            return result;
+        }
     </script>
 
     <!-- в этом скрипте находятся спеки -->
